<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/app_background"
    tools:context=".ui.profile.SetupUsernameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="24dp">


        <TextView
            android:id="@+id/tv_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_your_username"
            android:textColor="@color/title_text"
            android:textSize="@dimen/_23ssp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_username_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username_setup_instructions"
            android:textColor="@color/desc_text"
            android:textSize="@dimen/_12ssp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/selectedAvatarImageView"/>

        <ImageView
            android:id="@+id/selectedAvatarImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_launcher_background" 
            android:scaleType="centerCrop"
            android:contentDescription="@string/selected_avatar_desc"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
           />

        <com.example.artify.utils.GradientTextView
            android:id="@+id/tvChooseAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_avatar"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@+id/selectedAvatarImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/username_hint"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tvChooseAvatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.artify.utils.GradientButton
            android:id="@+id/btncOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Ok"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
